      "logical" and "raw"

    o more argument checking in 'write.gdsn'

SIGNIFICANT USER-VISIBLE CHANGES

    o v1.3.5: add a R Markdown vignette

    o more Unit tests

BUG FIXES

    o minor fixes

    o v1.3.2: fixes https://github.com/zhengxwen/gdsfmt/issues/7

    o v1.3.3: 'sync.gds' completely synchronizes the GDS file

    o v1.3.4: fixes https://github.com/zhengxwen/gdsfmt/issues/6


CHANGES IN VERSION 1.1.0
-------------------------

NEW FEATURES

    o add a new function 'is.element.gdsn'

    o allow closing GDS files in 'showfile.gds'

BUG FIXES

    o fully support big-endian systems

    o fix memory leaks in 'cleanup.gds'


CHANGES IN VERSION 1.0.4
-------------------------

NEW FEATURES

    o 'apply.gdsn' and 'clusterApply.gdsn' support characters

    o add a new function 'moveto.gds' to relocate GDS variables

    o add a new function 'diagnosis.gds' to diagnose the GDS file

SIGNIFICANT USER-VISIBLE CHANGES

    o 'apply.gdsn', 'clusterApply.gdsn': make the returned value invisible
      if as.is="none"

    o more options in 'read.gdsn' and 'readex.gdsn'

    o more Unit tests

BUG FIXES

    o fix a bug in 'delete.gdsn': allocated resource is not released
      in the GDS file


CHANGES IN VERSION 1.0.3
-------------------------

NEW FEATURES

    o add two new arguments 'allow.duplicate' and 'allow.fork' to the
      function 'openfn.gds'

    o add a new function 'showfile.gds'

    o allow reading a GDS file simultaneously between multiple forked
      processes (applied in 'mclapply' etc)

    o support the LinkingTo mechanism, via 'R_RegisterCCallable' and
      'R_GetCCallable'


CHANGES IN VERSION 1.0.2
-------------------------

NEW FEATURES

    o add 'size' and 'good' to the returned list from 'objdesp.gdsn'
      indicating the state of GDS node

    o add a new function 'cache.gdsn'

BUG FIXES

    o fix the memory issues reported by valgrind


CHANGES IN VERSION 1.0.1
-------------------------

NEW FEATURES
